--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 header {
     display: flex;
     justify-content: center;
+    background-color: #a0c565;
+    color: white;
+    font-weight: bold;
 }
 
 header, ul {
