--- a/style.css
+++ b/style.css
@@ -13,6 +13,16 @@ header {
 header, ul {
     list-style-type: none;
     display: flex;
-    gap: 30px;
+    gap: 40px;
     padding: 5px;
+    font-size: 20px;
+}
+
+.section {
+    padding-top: 30px;
+}
+
+footer {
+    text-align: center;
+    padding-top: 30px;
 }
