--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+body {
+    background-color: #f48eb8;
+}
+
 header {
     display: flex;
     justify-content: center;
@@ -19,7 +23,9 @@ header, ul {
 }
 
 .section {
-    padding-top: 30px;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: #a0c565;
 }
 
 footer {
