--- a/style.css
+++ b/style.css
@@ -4,20 +4,24 @@
 
 body {
     background-color: #f48eb8;
+    color: white;
 }
 
 header {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     background-color: #a0c565;
     color: white;
     font-weight: bold;
+    border-radius: 15px;
 }
 
-header, ul {
+ul {
     list-style-type: none;
     display: flex;
-    gap: 40px;
+    gap: 20px;
     padding: 5px;
     font-size: 20px;
 }
