--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     color: white;
 }
 
+h1 {
+    margin: 15px;
+}
+
+
 header {
     display: flex;
     justify-content: center;
@@ -18,12 +23,13 @@ header {
     border-radius: 15px;
 }
 
-ul {
+header ul {
     list-style-type: none;
     display: flex;
     gap: 20px;
     padding: 5px;
     font-size: 20px;
+    m
 }
 
 .section {
