--- a/style.css
+++ b/style.css
@@ -8,9 +8,13 @@ body {
 }
 
 h1 {
-    margin: 15px;
+    margin: 15px 0 0 0;
+    font-size: 30px;
 }
 
+h2 {
+    font-size: 20px;
+}
 
 header {
     display: flex;
