--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header ul {
     gap: 20px;
     padding: 5px;
     font-size: 20px;
-    m
+    
 }
 
 .section {
@@ -47,4 +47,14 @@ footer {
     text-align: center;
     padding-top: 30px;
     color: #f48eb8;
+}
+
+#about {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#about img {
+    height: 100px;
+    width: 100px;
 }
