--- a/style.css
+++ b/style.css
@@ -52,9 +52,15 @@ footer {
 #about {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 #about img {
     height: 100px;
     width: 100px;
+}
+
+.section h2 {
+    display: flex;
+    flex-basis: 100%;
 }
