Amend header + section margin/padding

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body {
     background-color: beige;
     color: white;
+    margin: 0;
 }
 
 h1 {
@@ -18,15 +19,15 @@ h2 {
     font-size: 20px;
 }
 
-header {
+.header-section {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background-color: #a0c565;
+    background-color:#a0c565;
     color: white;
     font-weight: bold;
-    border-radius: 15px;
+    padding: 20px;
 }
 
 header ul {
@@ -67,6 +68,8 @@ footer {
     flex-direction: column;
     flex-wrap: wrap;
     align-content: center;
+    margin: 30px;
+    gap: 20px;
 }
 
 .section h2 {
