--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ h2 {
 header ul {
     list-style-type: none;
     display: flex;
-    gap: 20px;
+    gap: 50px;
     padding: 5px;
     font-size: 20px;
     
@@ -112,6 +112,7 @@ p {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    box-shadow: 1px 1px 8px black;
 }
 .slide-arrow {
     position: absolute;
